--- a/index.html
+++ b/index.html
@@ -56,8 +56,10 @@
 
 		var objectsIndex = models.length - 1;
 		loadModels(models.length-1);
- 		var directionalLight = new THREE.DirectionalLight(0xffeedd);
-		directionalLight.position.set(0, 70, 100).normalize();
+		var ambientLight = new THREE.AmbientLight(0xfddf98);
+		scene.add(ambientLight);
+ 		var directionalLight = new THREE.DirectionalLight(0xffffff);
+		directionalLight.position.set(0, 100, 30).normalize();
 		scene.add(directionalLight);
 		//renderer = new THREE.CanvasRenderer();
 		renderer = new THREE.WebGLRenderer();
