--- a/demo.html
+++ b/demo.html
@@ -9,111 +9,16 @@
 	<script src="js/loaders/OBJMTLLoader.js"></script>
 	<script src="js/jquery.event.move.js"></script>
 	<script src="js/jquery.event.swipe.js"></script>
+	<script src="js/tombraidermenu.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body onkeyup="GetChar(event)">
-	<div id="fadein"></div>
+	<div id="menu"></div>
+	<script type="text/javascript">
+		tombraidermenu('menu');
+	</script>
 	<span id="title">3D Tomb Raider menu test for websites</span>
 	<span id="option">Use left and right keys to navigate</span>
-	
-	<script type="text/javascript">
-	var camera, scene, renderer, keyboard;
-        var models = ['obj/Saturn/Saturn.obj','obj/Megadrive/Megadrive.obj','obj/Mastersystem/Mastersystem.obj','obj/Dreamcast/Dreamcast.obj'];
-        var materials = ['obj/Saturn/Saturn.mtl','obj/Megadrive/Megadrive.mtl','obj/Mastersystem/Mastersystem.mtl','obj/Dreamcast/Dreamcast.mtl'];
-	var names = ['Saturn','Megadrive','Mastersystem','Dreamcast'];
-	var objects = new Array(models.length);
-	var selected = 2;
-	var angleStep = (360/(models.length)) * (Math.PI / 180);
-	var cameraAngle = angleStep*selected;
-	var radius = 600;
-	var cameraDistance = 1200;
-	var size = 100;
-	var loader = new THREE.OBJMTLLoader();
-
-	init();
-	animate();
-
-	function init() {
-
-		$(window).load(function(){ 
-			$('#fadein').fadeOut(3000,function(){$(this).remove();});
-		});
-
-		$(document).ready(function() {
-				$("body").on('swipeleft', function(e) {
-					selected--;
-				})
-
-				$("body").on('swiperight', function(e) {
-					selected++;
-				})
-
-		});
-
-		camera = new THREE.PerspectiveCamera( 75, window.innerWidth / window.innerHeight, 1, 10000 );
-		scene = new THREE.Scene();
-		camera.position.y = 100;
-
-		var objectsIndex = models.length - 1;
-		loadModels(models.length-1);
-		var ambientLight = new THREE.AmbientLight(0xfddf98);
-		scene.add(ambientLight);
- 		var directionalLight = new THREE.DirectionalLight(0xffffff);
-		directionalLight.position.set(0, 100, 30).normalize();
-		scene.add(directionalLight);
-		//renderer = new THREE.CanvasRenderer();
-		renderer = new THREE.WebGLRenderer();
-		renderer.setSize( window.innerWidth-25, window.innerHeight-25);
-
-		document.body.appendChild( renderer.domElement );
-
-	}
-
-	function animate() {
-
-		requestAnimationFrame( animate );
-		objects[mod(selected,models.length)].rotation.y += 0.01;
-		if (cameraAngle != angleStep*selected){
-			if (cameraAngle < angleStep*selected){
-				cameraAngle = cameraAngle+(angleStep*selected-cameraAngle)/10;
-			}
-			else cameraAngle = cameraAngle-(cameraAngle-angleStep*selected)/10;
-		}
-		camera.position.x=Math.cos(cameraAngle)*cameraDistance;
-		camera.position.z=Math.sin(cameraAngle)*cameraDistance;
-		camera.lookAt(new THREE.Vector3(0,0,0));
-		renderer.render( scene, camera );
-
-	}
-
-	function loadModels(index){
-		if (index > -1){
-			loader.load(models[index],materials[index], function ( object) {
-				object.position.x=Math.cos(angleStep*index)*radius;
-				object.position.z=Math.sin(angleStep*index)*radius;
-				object.scale.set(50,50,50)
-				scene.add(object);
-				objects[index] = object;
-			})
-			loadModels(index-1);
-		}
-	}
-
-	function mod (a,b){
-		return(a%b+b)%b;
-	}
-
-	function GetChar (event){
-		var keyCode = ('which' in event) ? event.which : event.keyCode;
-		if (keyCode==37){
-			selected++;
-		}
-		else if (keyCode==39){
-			selected --;
-		}
-		$('#option').text(names[mod(selected,models.length)]);
-	}
-	</script>
 	<span id="header">Brought to you by: <a href="http://www.github.com/namelivia">namelivia</a></span>
 	<span id="footer">
 		Supported browsers: <a href="http://chrome.google.com">Google Chrome</a>
