Rename render as rendering

--- a/demo/index.html
+++ b/demo/index.html
@@ -7,11 +7,11 @@
 		<div id="test" style="width:800;height:600;background-color:black" />
         <script type="text/javascript">
 			var menu = TombRaiderMenu("test")
-			menu.addItem('shotgun', 'http://localhost:8000/shotgun.gltf', undefined, undefined)
-			menu.addItem('shotgun', 'http://localhost:8000/shotgun.gltf', undefined, undefined)
-			menu.addItem('shotgun', 'http://localhost:8000/shotgun.gltf', undefined, undefined)
-			menu.addItem('shotgun', 'http://localhost:8000/shotgun.gltf', undefined, undefined)
-			menu.addItem('shotgun', 'http://localhost:8000/shotgun.gltf', undefined, undefined)
+			menu.addItem('shotgun0', 'http://localhost:8000/shotgun.gltf', undefined, undefined)
+			menu.addItem('shotgun1', 'http://localhost:8000/shotgun.gltf', undefined, undefined)
+			menu.addItem('shotgun2', 'http://localhost:8000/shotgun.gltf', undefined, undefined)
+			menu.addItem('shotgun3', 'http://localhost:8000/shotgun.gltf', undefined, undefined)
+			menu.addItem('shotgun4', 'http://localhost:8000/shotgun.gltf', undefined, undefined)
 
 			menu.setRadius(2800);
 			menu.setCameraHeight(1200);
